[build-system]
requires = ["setuptools"]
build-backend = 'setuptools.build_meta'

[project]
name = "belb"
version = "0.0.1"
description = "Biomedical Entity Linking Benchmark"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "bioc==2.0.post4",
  "loguru==0.6.0",
  "omegaconf~=2.2",
  "syntok==1.4.4",
  "pandas>=1.4.1",
  "smart_open==6.2.0",
  "openpyxl==3.0.10",
  "levenshtein==0.21.1",
  "SQLAlchemy==2.0.0b3",
  "wrapt==1.14.1",
  "requests==2.31.0"
]

[tool.setuptools.packages.find]
where = ["belb"]
namespaces = false

# https://github.com/pypa/setuptools/pull/3309
[tool.setuptools.package-data]
"belb.metadata" = ["**/*.json", "**/*.yaml", "*.csv"]

